--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
 			<div class="container">
 				<h2 class="info-section-header">About us</h2>
 				<ul class="info-section-list">
-					<li>
+					<li class="info-section-list-element">
 						<h3 class="info-section-goals">Strategy</h3>
 						<p class="info-text">
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
-					<li>
+					<li class="info-section-list-element">
 						<h3 class="info-section-goals">Punctuality</h3>
 						<p class="info-text">
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
-					<li>
+					<li class="info-section-list-element">
 						<h3 class="info-section-goals">Diligence</h3>
 						<p class="info-text">
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
-					<li>
+					<li class="info-section-list-element">
 						<h3 class="info-section-goals">Technologies</h3>
 						<p class="info-text">
 							Design practice focused on digital experiences. We bring forth a
